--- a/www/src/pages/index/index.scss
+++ b/www/src/pages/index/index.scss
@@ -13,7 +13,7 @@
     margin-bottom: 1rem;
 }
 .FormGroup{
-    width:70%;
+    width:500PX;
     margin:0 auto;
     padding-top: 3rem;
 }
@@ -22,4 +22,7 @@
 }
 .FormLabel{
     width:50%;
+}
+.taro-text{
+    font-size: 0.6rem;
 }
